--- a/talend.webapp.v3.usersandroles/.classpath
+++ b/talend.webapp.v3.usersandroles/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.webapp.core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/talend.mdm.libraries"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.core"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
