--- a/trunk/talend.webapp.v3.synchronization/.classpath
+++ b/trunk/talend.webapp.v3.synchronization/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/talend.mdm.libraries"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.webapp.core"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
