--- a/trunk/talend.webapp.v3.synchronizationaction/.classpath
+++ b/trunk/talend.webapp.v3.synchronizationaction/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/z.com.amalto.webapp.core.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/talend.mdm.libraries"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.webapp.core"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
