--- a/trunk/com.amalto.webapp.v3.adapter.logging/build.xml
+++ b/trunk/com.amalto.webapp.v3.adapter.logging/build.xml
@@ -52,6 +52,7 @@
 			<zipfileset dir="bin" prefix="WEB-INF/classes" includes="**/*.class" />
 			<zipfileset dir="web" includes="**/*" />
 			<zipfileset dir="src" prefix="WEB-INF/classes" includes="**/*.xsl" />
+			<zipfileset dir="libs" prefix="WEB-INF/lib" includes="*.jar" />
 		</jar>
    		<delete file="RELEASE-${major}.${minor}.${rev}-${build.number}.NOTES" />
     </target>
