add libs to each web app
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@27669 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/com.amalto.webapp.v3.adapter.logging/build.xml
+++ b/com.amalto.webapp.v3.adapter.logging/build.xml
@@ -52,6 +52,7 @@
 			<zipfileset dir="bin" prefix="WEB-INF/classes" includes="**/*.class" />
 			<zipfileset dir="web" includes="**/*" />
 			<zipfileset dir="src" prefix="WEB-INF/classes" includes="**/*.xsl" />
+			<zipfileset dir="libs" prefix="WEB-INF/lib" includes="*.jar" />
 		</jar>
    		<delete file="RELEASE-${major}.${minor}.${rev}-${build.number}.NOTES" />
     </target>
