--- a/trunk/talend.core.transformer.plugin.v2/.classpath
+++ b/trunk/talend.core.transformer.plugin.v2/.classpath
@@ -2,19 +2,8 @@
 <classpath>
 	<classpathentry excluding="com/amalto/core/test/ZZCoreV2EJBTest.java|com/amalto/core/ejb/OutboundPluginBeanOLD.java|com/amalto/core/ejb/OutboundPluginCtrlBeanOLD.java|com/amalto/core/ejb/OutboundAdaptorBeanOLD.java|com/amalto/core/ejb/OutboundAdaptorCtrlBeanOLD.java|com/amalto/core/ejb/DocumentCtrlBean.java|com/amalto/core/ejb/XmlServerSFWrapperBean.java|com/amalto/core/plugin/base/version/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/opt/jboss/client/log4j.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/deploy/zz.20.core.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/jboss-jaxrpc.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://java.sun.com/j2ee/1.4/docs/api/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/activation.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/jboss-j2ee.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/client/jbossws-client.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/client/jboss-jaxws.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/client/jboss-saaj.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/client/jaxb-api.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/talend.mdm.libraries"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
