--- a/trunk/com.amalto.webapp.core/build.xml
+++ b/trunk/com.amalto.webapp.core/build.xml
@@ -6,7 +6,7 @@
 	<property name="war" value="zz.20.webapp.core.war"/>	
 	<property name="jar" value="z.com.amalto.webapp.core.jar"/>	
 	
-	<property name="jboss.dir" value="/opt/jboss"/>
+	<property name="jboss.dir" value="c:/opt/jboss"/>
 	<property name="jboss.instance.dir" value="${jboss.dir}/server/default"/>
 	<property name="jboss.deploy.dir" value="${jboss.instance.dir}/deploy"/>
 	<property name="jboss.instance.lib" value="${jboss.instance.dir}/lib"/>
@@ -38,7 +38,7 @@
 			<zipfileset dir="src/WEB-INF" prefix="WEB-INF">
 				<include name="web.xml" />
 			</zipfileset>
-			<zipfileset dir="/opt/jboss/server/default/lib" prefix="WEB-INF/lib" includes="z.standard.jar" />
+			<zipfileset dir="${jboss.instance.lib}" prefix="WEB-INF/lib" includes="z.standard.jar" />
 			<zipfileset dir="src/WEB-INF" prefix="WEB-INF">
 				<include name="jboss-web.xml" />
 			</zipfileset>
