git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@27744 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.workbench/plugin.xml
+++ b/talend.workbench/plugin.xml
@@ -12,7 +12,7 @@
             category="com.talend.workbench"
             class="com.amalto.workbench.views.ServerView"
             icon="icons/talend-picto-small.gif"
-            id="com.talend.workbench.views.ServerView"
+            id="org.talend.openmdm.workbench.views.ServerView"
             name="Talend Open MDM Server View">
       </view>
    </extension>
