change update/checkout to a variable
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@27883 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.nsis/build.properties
+++ b/talend.mdm.nsis/build.properties
@@ -8,6 +8,9 @@ jboss.instance.lib=${jboss.instance.dir}/lib
 workspace.dir=I:/MDM/tom
 tmp.dir=c:/tmp/nsis
 
+#checkout or update svn sourcedoe, it should only be 'co' or 'up'
+svn_operation=up
+
 #svn properties setup
 svn.server.url=svn+ssh\://b2b.amalto.com/opt/svn/talend/trunk
 svn.username=scorreia
