--- a/trunk/talend.mdm.nsis/build.properties
+++ b/trunk/talend.mdm.nsis/build.properties
@@ -8,6 +8,9 @@ jboss.instance.lib=${jboss.instance.dir}/lib
 workspace.dir=I:/MDM/tom
 tmp.dir=c:/tmp/nsis
 
+#checkout or update svn sourcedoe, it should only be 'co' or 'up'
+svn_operation=up
+
 #svn properties setup
 svn.server.url=svn+ssh\://b2b.amalto.com/opt/svn/talend/trunk
 svn.username=scorreia
