change security-role name to authenticated
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@27898 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/com.amalto.webapp.v3.adapter.smtp/src/WEB-INF/web.xml
+++ b/com.amalto.webapp.v3.adapter.smtp/src/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>administration</role-name>
-			<role-name>b2box Smtp</role-name>
+			<role-name>authenticated</role-name>
 		</auth-constraint>
 	</security-constraint>
 	<login-config>
@@ -39,7 +39,7 @@
 		</form-login-config>
 	</login-config>
 	<security-role>
-		<role-name>b2box Smtp</role-name>
+		<role-name>authenticated</role-name>
 	</security-role>
 	<security-role>
 		<role-name>administration</role-name>
