--- a/talend.mdm.libraries/build.properties
+++ b/talend.mdm.libraries/build.properties
@@ -31,4 +31,5 @@ bin.includes = META-INF/,\
                lib/z.xsom.jar,\
                lib/jbossws-client.jar,\
                lib/jaxb-api.jar,\
-               lib/jboss-jaxws.jar
+               lib/jboss-jaxws.jar,\
+               lib/z.svnkit.jar
