--- a/talend.connector.svn/.classpath
+++ b/talend.connector.svn/.classpath
@@ -2,12 +2,7 @@
 <classpath>
 	<classpathentry excluding="com/amalto/connector/filesystem/ra/FileResourceAdapterOLD.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/opt/jboss/client/jbossall-client.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/jboss-j2ee.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/log4j.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/z.commons-lang-2.1.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/z.svnkit.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/default/lib/z.ganymed.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/talend.connector.core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.amalto.connector.core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/talend.mdm.libraries"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
