--- a/trunk/talend.mdm.libraries/.classpath
+++ b/trunk/talend.mdm.libraries/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/z.svnkit.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jboss-jaxws.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jbossws-client.jar"/>
