--- a/trunk/talend.mdm.nsis/build.properties
+++ b/trunk/talend.mdm.nsis/build.properties
@@ -18,4 +18,14 @@ svn.password=qsd56fg
 
 #makensis directory
 makensis.file.name=C:/Program Files/NSIS/makensis
+
+#output file name
+output.file.name=TOM
+
+#version id
+version.id=3.1.1
+
+#svn.revision.filename
+svn.revision.filename=svn_file_info.txt
+
 	
