add revision.number and version id to output file name add linux output file target
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28001 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.nsis/build.properties
+++ b/talend.mdm.nsis/build.properties
@@ -18,4 +18,14 @@ svn.password=qsd56fg
 
 #makensis directory
 makensis.file.name=C:/Program Files/NSIS/makensis
+
+#output file name
+output.file.name=TOM
+
+#version id
+version.id=3.1.1
+
+#svn.revision.filename
+svn.revision.filename=svn_file_info.txt
+
 	
