change /xtentismdmv3/secure  to /talendmdm/secure
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28021 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/com.amalto.webapp.v3.adapter.logging/src/WEB-INF/web.xml
+++ b/com.amalto.webapp.v3.adapter.logging/src/WEB-INF/web.xml
@@ -39,8 +39,8 @@
 		<auth-method>FORM</auth-method>
 		<realm-name>xtentisWebAppSecurity</realm-name>
 		<form-login-config>
-			<form-login-page>/xtentismdmv3/auth/login.jsp</form-login-page>
-		    <form-error-page>/xtentismdmv3/auth/login.jsp?error=loginFailed</form-error-page>
+			<form-login-page>/talendmdm/auth/login.jsp</form-login-page>
+		    <form-error-page>/talendmdm/auth/login.jsp?error=loginFailed</form-error-page>
 		</form-login-config>
 	</login-config>
     
