--- a/trunk/com.amalto.webapp.v3.viewbrowser/src/WEB-INF/web.xml
+++ b/trunk/com.amalto.webapp.v3.viewbrowser/src/WEB-INF/web.xml
@@ -11,7 +11,7 @@
         <servlet-class>uk.ltd.getahead.dwr.DWRServlet</servlet-class>
         <init-param>
             <param-name>debug</param-name>
-            <param-value>true</param-value>
+            <param-value>false</param-value>
         </init-param>
     </servlet>
     <servlet>
