git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28073 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.nsis/build.properties
+++ b/talend.mdm.nsis/build.properties
@@ -4,6 +4,10 @@ jboss.instance.dir=${jboss.dir}/server/default
 jboss.deploy.dir=${jboss.instance.dir}/deploy
 jboss.instance.lib=${jboss.instance.dir}/lib
 
+
+###################################################################
+####the following properties used for build release#################
+###################################################################
 #workspace where all the sourcecode is checkout
 workspace.dir=I:/MDM/tom
 tmp.dir=c:/tmp/nsis
@@ -23,7 +27,7 @@ makensis.file.name=C:/Program Files/NSIS/makensis
 output.file.name=TOM
 
 #version id
-version.id=3.2.0
+version.id=3.1.3
 
 #svn.revision.filename
 svn.revision.filename=svn_file_info.txt
