for session synchronization problem
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28092 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/com.amalto.webapp.v3.xtentismdm/src/WEB-INF/web.xml
+++ b/com.amalto.webapp.v3.xtentismdm/src/WEB-INF/web.xml
@@ -4,7 +4,11 @@
 
 <web-app >
     <!-- <distributable/> -->
-    
+    <!-- 
+       <listener>
+          <listener-class>com.amalto.webapp.core.util.SessionListener</listener-class>
+       </listener>
+    -->
     
         <servlet>
             <servlet-name>dwr-invoker</servlet-name>
