--- a/trunk/com.amalto.xmldb/version.properties
+++ b/trunk/com.amalto.xmldb/version.properties
@@ -1,8 +1,8 @@
-#Mon Apr 13 15:06:20 CEST 2009
+#Thu Jul 16 13:53:24 CST 2009
 rev=0
 major=2
-build.number=260
-java.version=1.5.0_16-133
-build.date=2009/04/13 15\:06
+build.number=301
+java.version=1.5.0_17-b04
+build.date=2009/07/16 13\:53
 minor=3
-built.by=bgrieder
+built.by=achen
