--- a/trunk/talend.workbench/build.properties
+++ b/trunk/talend.workbench/build.properties
@@ -28,7 +28,8 @@ bin.includes = icons/,\
                com.amalto.workbench.jar,\
                plugin.xml,\
                RELEASE.NOTES,\
-               META-INF/
+               META-INF/,\
+               exist/
 src.includes = src/,\
                META-INF/,\
                config.xml,\
