git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28209 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.workbench/build.properties
+++ b/talend.workbench/build.properties
@@ -28,7 +28,8 @@ bin.includes = icons/,\
                com.amalto.workbench.jar,\
                plugin.xml,\
                RELEASE.NOTES,\
-               META-INF/
+               META-INF/,\
+               exist/
 src.includes = src/,\
                META-INF/,\
                config.xml,\
