add common libs
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28228 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.libraries/build.properties
+++ b/talend.mdm.libraries/build.properties
@@ -3,7 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/jbossall-client.jar,\
-               lib/log4j.jar,\
                lib/z.commons-lang-2.1.jar,\
                lib/jboss-jaxrpc.jar,\
                lib/jboss-saaj.jar,\
@@ -32,4 +31,7 @@ bin.includes = META-INF/,\
                lib/jbossws-client.jar,\
                lib/jaxb-api.jar,\
                lib/jboss-jaxws.jar,\
-               lib/z.svnkit.jar
+               lib/z.svnkit.jar,\
+               lib/commons-beanutils-1.6.1.jar,\
+               lib/log4j.jar,\
+               lib/commons-codec.jar
