git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28229 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.libraries/.classpath
+++ b/talend.mdm.libraries/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-beanutils-1.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/z.svnkit.jar"/>
@@ -35,6 +36,5 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/zz.20.xtentis.connector.logging-mdb.ejb.jar"/>
-	<classpathentry kind="lib" path="lib/commons-beanutils-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
