git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28262 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/com.amalto.core/mdm.conf.template
+++ b/com.amalto.core/mdm.conf.template
@@ -11,6 +11,8 @@
 # Subscription Engine
 ######################################################
 
+subscription.engine.autostart=true
+
 #The number of simultaneous routing orders executed concurrently.
 #This is a token based mechanism, when all tokens are distributed,
 #the next Routing Order execution is put on hold until tokens are available
