git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28280 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.nsis/build.properties
+++ b/talend.mdm.nsis/build.properties
@@ -8,11 +8,11 @@ jboss.instance.lib=${jboss.instance.dir}/lib
 ###################################################################
 ####the following properties used for build release#################
 ###################################################################
-#workspace where all the sourcecode is checkout
+#workspace that all the sourcecode is checkout
 workspace.dir=I:/MDM/tom
 tmp.dir=c:/tmp/nsis
 
-#checkout or update svn sourcedoe, it should only be 'co' or 'up'
+#checkout or update svn sourcecode, it should only be 'co' or 'up'
 svn_operation=up
 
 #svn properties setup
