--- a/talend.mdm.libraries/build.properties
+++ b/talend.mdm.libraries/build.properties
@@ -9,7 +9,6 @@ bin.includes = META-INF/,\
                lib/servlet-api.jar,\
                lib/z.castor-1.0.5-xml.jar,\
                lib/z.com.amalto.connector.library.jar,\
-               lib/z.commons-fileupload-1.0.jar,\
                lib/z.crimson.jar,\
                lib/z.jazzy-core.jar,\
                lib/activation.jar,\
@@ -34,4 +33,6 @@ bin.includes = META-INF/,\
                lib/z.svnkit.jar,\
                lib/log4j.jar,\
                lib/commons-codec.jar,\
-               lib/commons-beanutils-1.6.1.jar
+               lib/commons-beanutils-1.6.1.jar,\
+               lib/commons-io.jar,\
+               lib/commons-fileupload.jar
