git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28290 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.libraries/build.properties
+++ b/talend.mdm.libraries/build.properties
@@ -34,5 +34,5 @@ bin.includes = META-INF/,\
                lib/log4j.jar,\
                lib/commons-codec.jar,\
                lib/commons-beanutils-1.6.1.jar,\
-               lib/commons-io.jar,\
-               lib/commons-fileupload.jar
+               lib/commons-fileupload.jar,\
+               lib/commons-io.jar
