add feature 0008552: Add a browse revision view in the webapp
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28313 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.workbench/plugin.xml
+++ b/talend.workbench/plugin.xml
@@ -42,6 +42,13 @@
             icon="icons/talend-picto-small.gif"
             id="com.amalto.workbench.editors.XObjectBrowser"
             name="com.amalto.workbench.editors.XObjectBrowser"/>
+      <editor
+            class="com.amalto.workbench.editors.XObjectRevisionBrowser"
+            default="false"
+            icon="icons/talend-picto-small.gif"
+            id="com.amalto.workbench.editors.XObjectRevisionBrowser"
+            name="com.amalto.workbench.editors.XObjectRevisionBrowser">
+      </editor>
    </extension>
 
 </plugin>
