--- a/talend.workbench/.classpath
+++ b/talend.workbench/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="com/amalto/workbench/dialogs/ViewsListDialog.java|com/amalto/workbench/actions/ViewsListAction.java|com/amalto/workbench/utils/MenuEntry.java|com/amalto/workbench/editors/DataModelEditorPage2.java|com/amalto/workbench/editors/ProcessResultsPage.java|com/amalto/workbench/utils/GlobalUserInfo.java" kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/resolver.jar"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/serializer.jar"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/trang.jar"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/xercesSamples.jar"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/lib/xml-apis.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jwsdp-shared"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jwsdp-endorsedlibs"/>
