add common collections
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28331 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.mdm.libraries/.classpath
+++ b/talend.mdm.libraries/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-collections.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl-2.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/z.exist-1.2.6-xmldb.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/z.exist-1.2.6.jar"/>
