0008856: Define an Eclipse perspective
git-svn-id: http://talendforge.org/svn/mdm/trunk@28821 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -13,7 +13,8 @@
             class="com.amalto.workbench.views.ServerView"
             icon="icons/talend-picto-small.gif"
             id="org.talend.openmdm.workbench.views.ServerView"
-            name="Talend Open MDM Server View">
+            name="MDM Server View">
+            <!--name="Talend Open MDM Server View"-->
       </view>
    </extension>
    <extension
