add org.talend.core.talendperspectives extension to let MDM perspective to be show in TIS/TDQ
git-svn-id: http://talendforge.org/svn/mdm/trunk@30900 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -63,5 +63,13 @@
             name="Master Data Management">
       </perspective>
    </extension>
-
+   <!-- add the following to let MDM perspective to be show in TIS/TDQ -->
+  <extension
+         point="org.talend.core.talendperspectives">
+      <TalendPerspective
+            refPerspectiveId="org.talend.mdm.perspective"
+            talendPerspectiveId="org.talend.mdm.perspective">
+      </TalendPerspective>
+   </extension>
+   
 </plugin>
