add mdm as standalone product(rcp)
git-svn-id: http://talendforge.org/svn/mdm/trunk@32026 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.workbench/build.properties
+++ b/org.talend.mdm.workbench/build.properties
@@ -37,7 +37,18 @@ bin.includes = icons/,\
                META-INF/lib/xml-apis.jar,\
                META-INF/lib/dom4j-1.6.1.jar,\
                META-INF/lib/jaxen-1.1-beta-6.jar,\
-               META-INF/lib/commons-collections-3.2.jar
+               META-INF/lib/commons-collections-3.2.jar,\
+               META-INF/lib/z.commons-lang-2.1.jar,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               content/,\
+               designer.ico,\
+               introContent.xml,\
+               plugin.properties,\
+               plugin_customization.ini,\
+               splash.bmp,\
+               mdm.product
 src.includes = src/,\
                META-INF/,\
                config.xml,\
