--- a/org.talend.mdm.workbench/about.properties
+++ b/org.talend.mdm.workbench/about.properties
@@ -4,7 +4,7 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-blurb=Master Data Management\n\
+blurb=Talend MDM Studio\n\
 \n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
