--- a/org.talend.mdm.workbench/build.properties
+++ b/org.talend.mdm.workbench/build.properties
@@ -48,7 +48,8 @@ bin.includes = icons/,\
                plugin.properties,\
                plugin_customization.ini,\
                splash.bmp,\
-               mdm.product
+               mdm.product,\
+               schema/
 src.includes = src/,\
                META-INF/,\
                config.xml,\
